--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -40,5 +40,5 @@ spec:
         {{- if .Values.testing.enabled }}
         - name: bpmn-models-volume
           configMap:
-            name: {{ include "my-app.fullname" . }}-bpmn-models
+            name: {{ include "hello-world.fullname" . }}-bpmn-models
         {{- end }}
